# iterthink

./: .cursorrules  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: ci.yml  desktop-build.yml  macos-notary.yml
alembic/: env.py
alembic/versions/: 20260204_0001_documents_and_versions.py  20260505_0002_document_versions_display_label.py  20260505_0003_paragraph_analysis.py  20260505_0006_document_versions_pdf_profile.py  20260509_0009_project_file_manifest.py  20260510_0010_impact_annotations.py  20260510_0011_impact_annotation_details_json.py  20260511_0012_paragraph_analysis_document_path.py
docs/: PACKAGING.md  RELEASE_TAG.md
iterthink/: LICENSE  THIRD_PARTY_NOTICES.md  __init__.py  __main__.py  action_chrome.py  app_entry.py  checks.py  checks_runner.py  compare_layout.py  config.py  crypto_vault.py  diff_card.py  document_import.py  help.md  impact_checks.py  import_classification_settings.py  licensing.py  llm_router.py  margin.py  ocr_settings.py  ollama_models.py  ollama_util.py  paragraph_align.py  paragraph_compare.py  paragraph_semantics.py  pdf_visual_diff.py  plan_compare_panel.py  privacy_shield_settings.py  prompts.py  remote_model_list.py  settings_ui.py  store_db.py  studio.py  studio_asset_compare.py  studio_checks_ui.py  studio_compare_text.py  studio_components.py  studio_compose.py  studio_constants.py  studio_explorer.py  (+12 more)
iterthink/ai/: __init__.py  llm_router.py  local_embedding.py  local_ocr.py  local_reranker.py  local_vision_embedding.py  ollama_models.py  ollama_ocr.py  ollama_plan_impact.py  passphrase_keyring.py  privacy_shield.py  privacy_shield_gguf.py  privacy_shield_llm.py  privacy_shield_model.py
iterthink/alembic/: env.py
iterthink/compare/: __init__.py  diff_card.py  layout.py  margin.py  paragraph_align.py  paragraph_compare.py  paragraph_semantics.py
iterthink/contract/: __init__.py  document_classification.py  document_function.py  document_function_catalog.py  enums.py  paths.py  version.py
iterthink/db/: __init__.py  base.py  bootstrap.py  change_models.py  content_models.py  mixins.py  models.py  session.py  workspace.py
iterthink/defaults/: checks.yaml  config.yaml  impact_checks.yaml  privacy_shield.yaml  prompts.yaml  token_pricing.yaml
iterthink/old/: ai_providers.py  embeddings.py
iterthink/persistence/: __init__.py  content_changes.py  content_repo.py  entity_settings.py  impact_annotations.py  paragraph_user_comments.py  plan_pdf_annotations.py  plan_region_impact_store.py  spell_resources.py  store_db.py  token_usage.py  vault_store.py  version_storage.py
iterthink/services/: __init__.py  checks_runner.py  contract_export.py  document_import.py  docx_footnotes.py  docx_placeholders.py  impact_analysis_runner.py  impact_context_scope.py  impact_prefilter.py  impact_rag.py  import_classification_runner.py  knowledge_export.py  markdown_docx_export.py  ocr_import.py  plan_change_region_sync.py  plan_change_regions.py  plan_pdf_annotations_render.py  plan_pdf_export.py  plan_region_context.py  plan_region_crops.py  plan_region_impact_runner.py  (+4 more)
old/: assistant.py  assistant_checks.py  document_import.py  document_importer.py  document_preview.py  prompt_change_summary.md  prompt_linkedin_virality.md  prompt_norm_check.md  prompt_project_impact.md  prompt_readability.md  prompt_sustainability_impact.md  prompts.json  services.py
packaging/: ci-flet-build.sh  macos-entitlements.plist  notary-status.sh  sign-macos.sh  staple-macos-dmg.sh
scripts/: generate_third_party_notices.py  hash_passphrase.py  prefetch_embed_model.py  sync_contract_classification.py  verify_embedding_cache.py
tests/: conftest.py  test_checks_override.py  test_checks_payload.py  test_checks_runner.py  test_chunk_type.py  test_classify_paragraph_semantics.py  test_compare_diff_card.py  test_compare_layout.py  test_compare_margin.py  test_compare_paragraph_align.py  test_compare_paragraph_compare.py  test_compose_selection_markdown.py  test_compose_toolbar_layout.py  test_content_changes.py  test_content_repo.py  test_content_tree.py  test_discuss_context.py  test_document_classification.py  test_document_import_pdf.py  test_editor_hot_path.py  test_focus_compose_mode.py  test_header_autohide.py  test_impact_analysis_runner.py  test_impact_override.py  test_impact_override_context.py  test_impact_prefilter.py  test_impact_rag.py  test_impact_rag_chunk_filter.py  test_impact_version_rag.py  test_import_classification.py  test_import_dialog.py  test_ki_comment_pick_affordance.py  test_ki_comments_list.py  test_knowledge_export.py  test_list_continuation.py  test_llm_generation_control.py  test_llm_router_usage.py  test_local_vision_embedding.py  test_markdown_docx_export.py  test_markdown_preview.py  (+47 more)
(+91 files in other folders)
