[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iterthink"
version = "0.1.0"
description = "Iterthink local Markdown writer (Flet + Ollama)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Editors :: Text Processing",
]
dependencies = [
    "flet>=0.80.0",
    "ollama>=0.4.0",
    "PyYAML>=6.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "rapidfuzz>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/iterthink/iterthink"
Issues = "https://github.com/iterthink/iterthink/issues"

[project.scripts]
iterthink = "iterthink.__main__:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["iterthink*"]

[tool.setuptools.package-data]
iterthink = ["assets/*.png", "assets/*.svg", "help.md", "defaults/*.yaml"]

[tool.flet]
product = "Iterthink"
org = "dev.iterthink.local"
company = "Iterthink"
copyright = "Copyright (c) 2026"

[tool.flet.app]
path = "."
exclude = [
    "old",
    ".venv",
    ".git",
    ".cursor",
    "__pycache__",
    "build",
    "packaging",
    "docs",
    ".pytest_cache",
    "alembic",
]
